5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1758_1185.log
== TEST (2019-05-28 11:33:56) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size[glic]):
	if(glic[i]> 99):
	i = i  +1 
	print(i)
-- ERROR:
File "XXXX", line 9
    i = i  +1 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:00) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size[glic]):
	if(glic[i]> 99):
	i = i  +1 
print(i)
-- ERROR:
File "XXXX", line 9
    i = i  +1 
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:04) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size[glic]):
	if(glic[i]> 99):
		i = i  +1 
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:34:30) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size[glic]):
	if(glic[i]> 99):
		i = i  +1 
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:02) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size[glic]):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:15) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
print(i)
-- ERROR:
File "XXXX", line 7
    while(i < size(glic):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:25) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:35:31) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
print(i)
-- EXECUTION TIME:
0.591349
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
6
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
10
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:36) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:35:55) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
		print(i)
-- ERROR:
File "XXXX", line 11
    print(i)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:05) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:36:47) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
	i = i + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:15) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
		i = i + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:45) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		cont = cont+1
		i = i + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:23) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		print(i)
		cont = cont+1
	i = i + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:31) 
-- CODE:
from numpy import * 
glic = array(eval(input("Glicose: ")))

i= 0
cont = 0 # Ocorrencia

while(i < size(glic)):
	if(glic[i]> 99):
		print(i)
		cont = cont+1
	i = i + 1
print(cont)
-- EXECUTION TIME:
0.736048
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
